fix(ci): stabilize linux/windows build path